# 0220gemini

./: .gitignore  README.md  pyproject.toml  run_demo.py
.github/workflows/: ci.yml  pages.yml
docs/: GenieGuard_v0.1.md  GenieGuard_v0.2.md  pitch_script_ja.md
examples/demo_case_ctf10/: README.md  seeds.json  spec.before.json
examples/demo_case_ctf_bias/: README.md  spec.before.json
examples/demo_case_ctf_exploit/: README.md  spec.before.json
src/genieguard/: __init__.py  artifacts.py  audit.py  cli.py  demo_cases.py  evidence.py  gate.py  io_utils.py  models.py  patcher.py  pathing.py  pipeline.py  policies.py  prompts.py  regression.py  reporting.py  results.py  runtime.py  selfplay.py  simulator.py  spec_gen.py  validation.py
tests/: test_evidence_verify.py  test_gate_contract.py  test_pipeline_smoke.py  test_runtime_meta.py  test_simulator_determinism.py
tools/: build_release_bundle.py  demo.bat  demo.sh  find_demo_cases.py  inspect_logs.py  quick_eval.py  release.bat
